fix: edited 2 handlers of creating file
